--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>welcome to our new website</h1>
     <p>thanks</p>
+    <h1>welcome to our new website</h1>
+    <p>thanks</p>
+    <h1>welcome to our new website</h1>
+    <p>thanks</p>
 </body>
 </html>
